# Inertial-Guidance-Lower

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  TestforSTM32F411.ioc  flash.sh
Core/Src/: main.c
CubeMX_BSP/: CMakeLists.txt  CubeMX_BSP.ioc
CubeMX_BSP/Core/Inc/: main.h
CubeMX_BSP/Core/Src/: freertos.c  gpio.c  main.c  tim.c  usart.c
CubeMX_BSP/cmake/stm32cubemx/: CMakeLists.txt
LogicCode/inc/: crt_imu.h  para_imu.h
LogicCode/src/: crt_imu.cpp  retarget.c
TSL/: CMakeLists.txt
TSL/Device/BMI088/: bmi08a.c  common.c  common.h
TSL/Device/GNSS/inc/: dvc_gnss.hpp
TSL/Device/GNSS/src/: dvc_gnss.cpp
TSL/Driver/inc/: drv_uart.h
TSL/Driver/src/: drv_uart.c
Task/inc/: tsk_imu.h  tsk_isr.h
Task/src/: tsk_imu.cpp  tsk_isr.cpp
TemporarySTM32Library/Algorithm/inc/: CRC8_CRC16.h  alg_ahrs.hpp  alg_filter.hpp
TemporarySTM32Library/Algorithm/src/: CRC8_CRC16.c  alg_ahrs.cpp
cmake/stm32cubemx/: CMakeLists.txt
